tests/errors/int_invalid_string.py
# expect_error: ValueError
print(int("12abc"))